# cmake-imported-lib-test

./: CMakeLists.txt  main.c
